maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:59: error: not found: value fonceAuNord
    fonceAuNord()
    ^