maze.pledge.PledgeMaze.scala.code
var virages = 0

def murAGauche():Boolean = {
  
  var res = false
  gauche()
  res = estFaceMur()
  droite()
  return res 
  
}

def libreAuNord():Boolean = {
  
  var dirInit = getDirection()
  var res = false
  setDirection(Direction.NORD)
  res = estFaceMur()
  setDirection(dirInit)
  return res
  
}


def longerMurGauche() {
  
  if (murAGauche()) {
    
    if (estFaceMur()) {
      
      droite(); virages = virages - 1
      return
    
    } else {
      
      avance()
      return
      
    }
    
  } else {
      
    	gauche();virages = virages + 1;
      avance()
    	return
    
  }
  
}


override def run() {
  
  setDirection(Direction.NORD)
  
  while (!estSurBiscuit()) {
    
    fonceAuNord()
    while (virages !=0 && !libreAuNord()) {
      
      longerMurGauche()
      
    }
    
  }
  
  prendBiscuit()
  
}